# GameGl

./: .gitignore  CMakeLists.txt  GameGl.pro  GameGl.pro.user.3.2-pre1  GameGl.pro.user.414b04e.2.7pre1  GameGl.pro.user.92724d9  GameGl.pro.user.df5753b  custom_hints.cpp  custom_hints.h  main.cpp  resources_helper.cpp  resources_helper.h  step_builder.cpp  step_builder.h
Api/: apibase.h
Core/: actionpack.cpp  actionpack.h  apibase.h  broadcaster.cpp  broadcaster.h  config.cpp  config.h  configresolver.cpp  configresolver.h  configurable.h  enginecore.cpp  enginecore.h  enginecoreincludes.h  enginedatastructures.h  engineinitializer.h  engineinterface.h  eventshandler.cpp  eventshandler.h  eventshandler_interfaces.h  eventshandler_new.cpp  eventshandler_new.h  executable.h  executor.h  invokable.cpp  invokable.h  meta.cpp  meta.h  module_provider.h  service.cpp  service.h  service_cluster.cpp  service_cluster.h  threadpool.cpp  threadpool.h  worker.cpp  worker.h  workerqueueproxy.cpp  workerqueueproxy.h
Core/events/: eventshandler.cpp  eventshandler.h  eventshandler_interfaces.h
Core/provider/: provider.cpp  provider.h  providerholder.cpp  providerholder.h
Core/provider/config/: configprovider.h  defaultconfigprovider.cpp  defaultconfigprovider.h
Core/service/: service.cpp  service.h  service_cluster.cpp  service_cluster.h
Framework/: camera.cpp  camera.h  drawableworldobject.cpp  drawableworldobject.h  light.cpp  light.h  material.h  object_hints.cpp  object_hints.h  renderflags.h  scenebuilder.cpp  scenebuilder.h  texturebuilder.cpp  texturebuilder.h  world.cpp  world.h  worldobject.cpp  worldobject.h
Framework/Loaders/: loader.cpp  loader.h  meshloader.cpp  meshloader.h  programloader.cpp  programloader.h  textureloader.cpp  textureloader.h
Framework/Rendering/: RenderStepWrapper.h  scenebuilder.cpp  scenebuilder.h
Game/: game.cpp  game.h  gamecore.cpp  gamecore.h  gamecoreinterface.h  gamestates.h  mainmenu.cpp
Graphics/: dummyglcontext.cpp  framebufferproperties.h  glhelpers.cpp  glhelpers.h  glprogram.cpp  glprogram.h  glrenderer.cpp  glrenderer.h  glshader.cpp  glshader.h  gluniform.cpp  gluniform.h  graphics_events.h  graphicsapi.h  graphicsclasses.cpp  graphicsclasses.h  material.cpp  material.h  mesh.cpp  mesh.h  meshdescriptor.h  openglsdl.cpp  openglsdl.h  openglwrapper.cpp  renderdefs.cpp  renderdefs.h  renderer.cpp  renderer.h  rendering_attributtes.h  renderpath.h  renderqueue.cpp  renderqueue.h  renderstep.h  rendertarget.h  scene.h  sdlclasses.cpp  sdlclasses.h  sdlwrapper.cpp  texture.h  uniform.h  (+1 more)
Helpers/: SharedTaskList.cpp  SharedTaskList.h  action.cpp  action.h  dataobject.h  executor.h  function_traits.h  generic_invokable.cpp  generic_invokable.h  genericcondition.h  helpers.h  invokablepack.cpp  invokablepack.h  invokationresult.h  lock_holder.h  repeatedpromise.h  repeteadfuture.cpp  repeteadfuture.h  shared_thread_local_wrapper.h  sharedstate.h  sharedthreadlocalwrapper.h  size.h  storagepointer.cpp  storagepointer.h  synchronized_map.h  task.cpp  task.h
IO/: devid.h  ioapi.h  ioevents.h
Input/: inputapi.h  inputdata.h  inputevents.h  sdlinput.cpp  sdlinput.h
Logger/: logger.cpp  logger.h
Math/: mathconstants.h  mathdefines.h  mathhelpers.cpp  mathhelpers.h  matrix.h  quaternion.h
Modules/: graphicsmodule.cpp  graphicsmodule.h  inputmodule.cpp  inputmodule.h  iomodule.cpp  iomodule.h  module.cpp  module.h  moduleinterface.h  resourcesmodule.cpp  resourcesmodule.h  soundmodule.h  storagemodule.cpp  storagemodule.h
Platform/Graphics/OpenGL/: gl_generic.cpp  gl_generic.h  gl_program_handle.cpp  gl_program_handle.h  gl_program_proxy.cpp  gl_program_proxy.h  glcontext.cpp  glcontext.h  glframebuffercontainer.h  glhelpers.cpp  glhelpers.h  glmeshobject.h  glprogram.cpp  glprogram.h  glrenderer.cpp  glrenderer.h  glshader.cpp  glshader.h  gltexturefactory.cpp  gltexturefactory.h  gluniform.cpp  gluniform.h  graphics_context_data.cpp  graphics_context_data.h  graphicscontextdata.cpp  graphicscontextdata.h  opengl_module_provider.cpp  opengl_module_provider.h  openglsdl.cpp  openglsdl.h  sdlclasses.cpp  sdlclasses.h
Platform/Input/SDL2/: sdl2_input_provider.cpp  sdl2_input_provider.h  sdlinput.cpp  sdlinput.h
Platform/OpenGL/: glbindings.cpp  glbindings.h  glbuffer.cpp  glbuffer.h  gldebug.cpp  gldebug.h  glframebuffer.cpp  glframebuffer.h  globject.h  globjectmanager.h  gltexture.cpp  gltexture.h  glvertexarray.cpp  glvertexarray.h
Platform/Storage/: defaultstorage.cpp  defaultstorage.h  storageservice.cpp  storageservice.h
Platform/Storage/Simple/: simple_storage.cpp  simple_storage.h  (+4 more)
Public/: apis.h  coreinterface.cpp  coreinterface.h  meshreader3ds.cpp  meshreader3ds.h  meshreaderobj.cpp  meshreaderobj.h  mtlreader.cpp  mtlreader.h  shaderreader.cpp  shaderreader.h  ui.h
Resources/: filereader.cpp  filereader.h  resourcesapi.h
Shaders/: FragmentShader.glsl  VertexShader.glsl  brdf_lut_fragment_shader.glsl  cubemap_fragment_shader.glsl  cubemap_geometry_shader.glsl  cubemap_vertex_shader.glsl  fragmentshadertex.glsl  fragmentshadertex_copy.glsl  hdr_fragment_shader.glsl  hdr_vertex_shader.glsl  ibl_cubemap_convolution_fragment_shader.glsl  ibl_cubemap_fragment_shader.glsl  ibl_cubemap_geometry_shader.glsl  ibl_cubemap_prefilter_fragment_shader.glsl  ibl_cubemap_vertex_shader.glsl  normals_fragment_shader.glsl  normals_geometry_shader.glsl  normals_vertex_shader.glsl  pbr_fragment_shader.glsl  pbr_vertex_shader.glsl  shadowmap_fragment_shader.glsl  shadowmap_geometry_shader.glsl  shadowmap_vertex_shader.glsl  skybox_fragment_shader.glsl  skybox_vertex_shader.glsl  texture_viewer.glsl  vertexshadertex.glsl  vertexshadertex_copy.glsl
Storage/: storageapi.h  storagedescriptor.h
Tests/: tests.cpp  tests.h
Ui/: basicshapes.cpp  basicshapes.h  basicuielements.cpp  basicuielements.h  elementinterface.h  uielements.cpp  uielements.h  uilayer.cpp  uilayer.h
(+25 files in other folders)
